# notes-programming

.github/workflows/: change-detection.yml  test.yml
c/: CMakeLists.txt  README.md  main1  pointer
c/src/: CMakeLists.txt  main1.c  pointer.c
c/test/: CMakeLists.txt
cpp/: CMakeLists.txt  README.md  main_dtor
cpp/src/: CMakeLists.txt  Templates.h  main1.cpp  main_dtor.cpp
cpp/src/example1/: Complex.cpp  Complex.h  readme.md
cpp/src/example1/2018_11_A/: CoverFun.cpp  MyClass.cpp  MyClass.h
cpp/src/example1/2018_11_B/: ArrayAssign.cpp  ArrayAssign.h  Point.cpp  Point.h
cpp/src/example1/2020_11_A/: StrOrder.cpp  StrOrder.h
cpp/src/practices/2020_11_A/: Shape.cpp
cpp/test/: CMakeLists.txt
cpp/test/basic/: CMakeLists.txt  array.test.cpp  chars.test.cpp  const.test.cpp  const_cast.test.cpp  ctor.test.cpp  ctor_copy.test.cpp  ctor_type_conversion.test.cpp  derive.test.cpp  dtor.test.cpp  enclosing_class.test.cpp  forward_declaration.test.cpp  friend_class.test.cpp  friend_function.test.cpp  function.test.cpp  iostream.test.cpp  math.test.cpp  misc.test.cpp  new_delete.test.cpp  object.test.cpp  operator_overload.test.cpp  pointer.test.cpp  primitive.test.cpp  reference.test.cpp  static.test.cpp  string.test.cpp  template.test.cpp  virtual.test.cpp
cpp/test/example1/: CMakeLists.txt  Complex.test.cpp
cpp/test/example1/2018_11_A/: CoverFun.test.cpp  MyClass.test.cpp
cpp/test/example1/2018_11_B/: ArrayAssign.test.cpp  Point.test.cpp
cpp/test/example1/2020_11_A/: StrOrder.test.cpp
java/: build.gradle
javascript/: jest.config.js  package.json
javascript/.run/: test es6.run.xml
kotlin/: build.gradle
python/: Pipfile  pyproject.toml
python/basic/: test_class.py  (+4 more)
(+102 files in other folders)
